--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -14,7 +14,7 @@
 
     <ion-item lines="none">
       <ion-label class='font'>
-        Benutzername oder Email Adresse
+        Benutzername oder Email Adresse:
       </ion-label>
     </ion-item>
     <ion-item lines="none" class="input-label">
@@ -24,7 +24,7 @@
 
     <ion-item lines="none">
       <ion-label class='font'>
-        Passwort
+        Passwort:
       </ion-label>
     </ion-item>
     <ion-item lines="none" class="input-label">
