--- a/src/global.scss
+++ b/src/global.scss
@@ -40,6 +40,6 @@ ion-app.cameraView ion-content{
     position: absolute; 
     display: block;  
     box-sizing: border-box;
-    border-radius: 10px;
+    //border-radius: 10px;
 }
 
