--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -31,9 +31,8 @@
   color:white
 }
 
-.login-button{
+.popover-button{
   --box-shadow:none;
-  font-family:verdana;
 }
 
 .center {
@@ -52,14 +51,5 @@
   left: 0;
   bottom: 10px;
   right: 0;
-
-}
-
-.login-item{
-  border-radius: 25px;
-  background: #73AD21;
-  padding: 20px;
-  width: 200px;
-  height: 150px; 
 
 }
